--- a/stack/ansible/keights-stack/tasks/present.yml
+++ b/stack/ansible/keights-stack/tasks/present.yml
@@ -1,6 +1,6 @@
 ---
 - name: set default values
-  set_fact:
+  ansible.builtin.set_fact:
     cluster_dns: '{{ keights_stack.masters.service_cidr.split(".")[:-1] | join(".") }}.10'
     k8s_version: '{{ keights_stack.k8s_version | default(keights_version.split("-")[0]) }}'
     default_image: 'debian-buster-k8s-hvm-amd64-{{ keights_version }}'
@@ -15,22 +15,22 @@
       - native.cgroupdriver=systemd
 
 - name: set etcd device
-  set_fact:
+  ansible.builtin.set_fact:
     etcd_device: '{{ keights_stack.etcd.device | default("/dev/xvdg") }}'
   when: etcd_mode == 'external'
 
 - name: set etcd device
-  set_fact:
+  ansible.builtin.set_fact:
     etcd_device: '{{ keights_stack.masters.etcd_device | default("/dev/xvdg") }}'
   when: etcd_mode == 'stacked'
 
 - name: ensure cache directory
-  file:
+  ansible.builtin.file:
     path: '{{ cache_dir }}'
     state: directory
 
 - name: find ami
-  ec2_ami_info:
+  amazon.aws.ec2_ami_info:
     owners: '{{ keights_stack.image_owner | default("256008164056") }}'
     filters:
       name: '{{ keights_stack.image | default(default_image) }}'
@@ -38,33 +38,33 @@
   when: keights_stack.lookup_image | default(lookup_image)
 
 - name: assert that at least one ami is found
-  assert:
+  ansible.builtin.assert:
     that: ami.images | length > 0
     msg: 'expected to find at least one ami with name {{ keights_stack.image | default(default_image) }}'
   when: keights_stack.lookup_image | default(lookup_image)
 
 - name: assert valid value for etcd_mode
-  assert:
+  ansible.builtin.assert:
     that: etcd_mode in ('stacked', 'external')
     msg: "keights_stack.etcd_mode must be one of 'stacked' or 'external'"
 
 - name: assert the correct number of master subnet ids
-  assert:
+  ansible.builtin.assert:
     that: keights_stack.masters.subnet_ids | length in (1, 3)
     msg: 'expected to be given 1 or 3 master subnet ids, got {{ keights_stack.masters.subnet_ids | length }}'
 
 - name: assert valid value for create_iam_resources
-  assert:
+  ansible.builtin.assert:
     that: create_iam_resources in (true, false)
     msg: keights_stack.create_iam_resources must be a boolean true or false value
 
 - name: assert that kms key id is defined when creating iam resources
-  assert:
+  ansible.builtin.assert:
     that: keights_stack.kms_key_id is defined
   when: create_iam_resources
 
 - name: assert that iam role arns are defined for lambdas
-  assert:
+  ansible.builtin.assert:
     that:
     - keights_stack.instattr_lambda_role_arn is defined
     - keights_stack.auto_namer_lambda_role_arn is defined
@@ -75,30 +75,30 @@
   when: not create_iam_resources
 
 - name: assert that instance profiles are defined for masters
-  assert:
+  ansible.builtin.assert:
     that: keights_stack.masters.instance_profile is defined
     msg: keights_stack.masters.instance_profile must be defined when create_iam_resources is false
   when: not create_iam_resources
 
 - name: assert that instance profiles are defined for etcd
-  assert:
+  ansible.builtin.assert:
     that: keights_stack.etcd.instance_profile is defined
     msg: keights_stack.etcd.instance_profile must be defined when create_iam_resources is false
   when: not create_iam_resources and etcd_mode == 'external'
 
 - name: assert that instance profiles are defined for nodes
-  assert:
+  ansible.builtin.assert:
     that: (keights_stack.node_groups | map(attribute='instance_profile') | list | length) == (keights_stack.node_groups | length)
     msg: instance_profile must be defined for each node group when create_iam_resources is false
   when: not create_iam_resources
 
 - name: set image id
-  set_fact:
+  ansible.builtin.set_fact:
     image_id: '{{ ami.images[0].image_id }}'
   when: keights_stack.lookup_image | default(lookup_image)
 
 - name: find lambda archives in s3
-  aws_s3:
+  amazon.aws.aws_s3:
     bucket: '{{ keights_stack.resource_bucket }}'
     object: 'stackbot/{{ item }}/{{ keights_version }}/go1.x/{{ item }}-{{ keights_version }}.zip'
     mode: geturl
@@ -114,7 +114,7 @@
     - lambda
 
 - name: download lambda archives releases
-  get_url:
+  ansible.builtin.get_url:
     url: https://github.com/cloudboss/keights/releases/download/{{ keights_version }}/{{ item.item }}-{{ keights_version }}.zip
     dest: '{{ cache_dir }}'
   loop: '{{ stackbots.results }}'
@@ -124,7 +124,7 @@
     - lambda
 
 - name: upload lambda archives to s3
-  aws_s3:
+  amazon.aws.aws_s3:
     bucket: '{{ keights_stack.resource_bucket }}'
     object: 'stackbot/{{ item.item }}/{{ keights_version }}/go1.x/{{ item.item }}-{{ keights_version }}.zip'
     mode: put
@@ -136,7 +136,7 @@
     - lambda
 
 - name: build common stack
-  cloudformation:
+  amazon.aws.cloudformation:
     stack_name: '{{ keights_stack.cluster_name }}-common'
     role_arn: '{{ keights_stack.cfn_role_arn | default(omit) }}'
     template: '{{ role_path }}/files/common.yml'
@@ -164,7 +164,7 @@
     - common
 
 - name: set iam variables
-  set_fact:
+  ansible.builtin.set_fact:
     master_instance_profile: '{{ common_stack.stack_outputs.MasterInstanceProfile | default(keights_stack.masters.instance_profile) }}'
     auto_namer_lambda_role_arn: '{{ common_stack.stack_outputs.AutoNamerLambdaRoleArn | default(keights_stack.auto_namer_lambda_role_arn) }}'
     kube_ca_lambda_role_arn: '{{ common_stack.stack_outputs.KubeCaLambdaRoleArn | default(keights_stack.kube_ca_lambda_role_arn) }}'
@@ -172,12 +172,12 @@
     basic_lambda_role_arn: '{{ common_stack.stack_outputs.BasicLambdaRoleArn | default(keights_stack.basic_lambda_role_arn) }}'
 
 - name: set etcd iam instance profile
-  set_fact:
+  ansible.builtin.set_fact:
     etcd_instance_profile: '{{ common_stack.stack_outputs.EtcdInstanceProfile | default(keights_stack.etcd.instance_profile) }}'
   when: etcd_mode == 'external'
 
 - name: build etcd stack
-  cloudformation:
+  amazon.aws.cloudformation:
     stack_name: '{{ keights_stack.cluster_name }}-etcd'
     role_arn: '{{ keights_stack.cfn_role_arn | default(omit) }}'
     template: '{{ role_path }}/files/etcd.yml'
@@ -216,7 +216,7 @@
   when: etcd_mode == 'external'
 
 - name: build master stack
-  cloudformation:
+  amazon.aws.cloudformation:
     stack_name: '{{ keights_stack.cluster_name }}-master'
     role_arn: '{{ keights_stack.cfn_role_arn | default(omit) }}'
     template: '{{ role_path }}/files/master-external.yml'
@@ -261,7 +261,7 @@
   when: etcd_mode == 'external'
 
 - name: build master stack
-  cloudformation:
+  amazon.aws.cloudformation:
     stack_name: '{{ keights_stack.cluster_name }}-master'
     role_arn: '{{ keights_stack.cfn_role_arn | default(omit) }}'
     template: '{{ role_path }}/files/master-stacked.yml'
@@ -311,11 +311,11 @@
   when: etcd_mode == 'stacked'
 
 - name: set master stack
-  set_fact:
+  ansible.builtin.set_fact:
     master_stack: '{{ master_stack_external if "stack_outputs" in master_stack_external else master_stack_stacked }}'
 
 - name: build node stack
-  cloudformation:
+  amazon.aws.cloudformation:
     stack_name: '{{ keights_stack.cluster_name }}-node-{{ item.name }}'
     role_arn: '{{ keights_stack.cfn_role_arn | default(omit) }}'
     template: '{{ role_path }}/files/node.yml'
@@ -353,7 +353,7 @@
     - nodes
 
 - name: map node subnets to tags
-  set_fact:
+  ansible.builtin.set_fact:
     subnet_tag_map: '{{ subnet_tag_map | combine(dict(item.subnet_ids | zip_longest([], fillvalue=node_groups[idx].subnet_tags) | list)) }}'
   loop: '{{ keights_stack.node_groups }}'
   loop_control:
@@ -362,14 +362,14 @@
     'subnet_tags' in item
 
 - name: collect subnet facts
-  ec2_vpc_subnet_info:
+  amazon.aws.ec2_vpc_subnet_info:
     filters:
       subnet-id: '{{ item.key }}'
   loop: '{{ subnet_tag_map | dict2items }}'
   register: node_subnet_info
 
 - name: tag node subnets
-  ec2_vpc_subnet:
+  amazon.aws.ec2_vpc_subnet:
     vpc_id: '{{ keights_stack.vpc_id }}'
     cidr: '{{ item.subnets.0.cidr_block }}'
     map_public: '{{ item.subnets.0.map_public_ip_on_launch }}'
