--- a/ci/assets/v1.21-stacked/cluster/requirements.txt
+++ b/ci/assets/v1.21-stacked/cluster/requirements.txt
@@ -1,24 +1,21 @@
-ansible==2.10.7
-ansible-base==2.10.7
-awscli==1.19.49
+ansible==4.1.0
+ansible-core==2.11.2
 boto==2.49.0
-boto3==1.17.49
-botocore==1.20.49
-cachetools==4.2.1
-certifi==2020.12.5
+boto3==1.17.98
+botocore==1.20.98
+cachetools==4.2.2
+certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
-colorama==0.4.3
 cryptography==3.4.7
-docutils==0.15.2
-google-auth==1.28.1
+google-auth==1.32.0
 idna==2.10
-Jinja2==2.11.3
+Jinja2==3.0.1
 jmespath==0.10.0
-kubernetes==11.0.0
-MarkupSafe==1.1.1
-oauthlib==3.1.0
-openshift==0.11.2
+kubernetes==12.0.1
+MarkupSafe==2.0.1
+oauthlib==3.1.1
+openshift==0.12.0
 packaging==20.9
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -29,10 +26,11 @@ python-string-utils==1.0.0
 PyYAML==5.4.1
 requests==2.25.1
 requests-oauthlib==1.3.0
+resolvelib==0.5.4
 rsa==4.7.2
-ruamel.yaml==0.17.4
+ruamel.yaml==0.17.9
 ruamel.yaml.clib==0.2.2
-s3transfer==0.3.6
-six==1.15.0
-urllib3==1.26.4
-websocket-client==0.58.0
+s3transfer==0.4.2
+six==1.16.0
+urllib3==1.26.5
+websocket-client==1.1.0
