--- a/stack/ami/requirements.txt
+++ b/stack/ami/requirements.txt
@@ -1,16 +1,11 @@
-ansible==2.10.7
-ansible-base==2.10.7
-asn1crypto==1.4.0
-bcrypt==3.2.0
+ansible==4.1.0
+ansible-core==2.11.2
 cffi==1.14.5
 cryptography==3.4.7
-Jinja2==2.11.3
-MarkupSafe==1.1.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
 packaging==20.9
-paramiko==2.7.2
-pyasn1==0.4.8
 pycparser==2.20
-PyNaCl==1.4.0
 pyparsing==2.4.7
 PyYAML==5.4.1
-six==1.15.0
+resolvelib==0.5.4
